samples/_failures_safe/1761466310_c87d23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be527df0.c: In function ‘main’:
./samples/SAFE/__tmp_be527df0.c:151:41: error: expected ‘;’ at end of input
  151 |                         result[i][j] = 0
      |                                         ^
      |                                         ;
./samples/SAFE/__tmp_be527df0.c:151:25: error: expected declaration or statement at end of input
  151 |                         result[i][j] = 0
      |                         ^~~~~~
./samples/SAFE/__tmp_be527df0.c:151:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be527df0.c:151:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be527df0.c:151:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be527df0.c:151:25: error: expected declaration or statement at end of input
